--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Dr Sandeep Deshmukh]
-description: [Big Data, Hadoop and Apache Apex trainer]
+description: [Hadoop and Apache Apex trainer]
