--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Dr Sandeep Deshmukh]
-description: [Hadoop and Apache Apex trainer]
+description: [Big Data, Hadoop, Apache Apex, and Data Science trainer]
