--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: [Dr Sandeep Deshmukh]
 description: [Big Data, Hadoop, Apache Apex, and Data Science trainer]
+google_analytics: [UA-89158674-1]
