--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: [Dr Sandeep Deshmukh]
-description: [Big Data - Hadoop - Apache Apex and Data Science trainer]
+description: [Trainer for Big Data - Hadoop - Apache Apex - Data Science]
 google_analytics: [UA-89158674-1]
